// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatarDeprecated /> renders correctly 1`] = `
<a
  className="mr-10"
  href="http://jesuistoto.com"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <img
    alt=""
    className="img-circle object-cover"
    src="http://media12/profileAvatar.jpg"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  />
</a>
`;

exports[`<UserAvatarDeprecated /> renders correctly user without avatar 1`] = `
<a
  className=""
  href="http://jesuistoto.com"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <DefaultAvatar
    className="img-circle avatar mr-10"
    size={16}
  />
</a>
`;

exports[`<UserAvatarDeprecated /> renders correctly with custom default avatar 1`] = `
<a
  className=""
  href="http://jesuistoto.com"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={Object {}}
>
  <img
    alt=""
    className="img-circle object-cover"
    src="http://avatar/customAvatar.jpg"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  />
</a>
`;
